# windwatch

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml  windwatch.json  windwatch.py
.github/workflows/: release.yml
